Fix mobile horizontal scroll glitch

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -128,6 +128,7 @@ a:hover,
 a:focus {
     text-decoration: none;
     color: var(--link);
+    word-break: break-word;
 }
 
 ol,
